--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#A3000000</color>
     <color name="white">#B4FFFFFF</color>
     <color name="orange">#E07C19</color>
+    <color name="darkblack">#C9000000</color>
 </resources>
