--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -13,10 +13,7 @@
         android:layout_height="match_parent" >
 
 
-
-
     <androidx.cardview.widget.CardView
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
@@ -54,7 +51,7 @@
                         android:id="@+id/account_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Dinesh Patil"
+                        android:text=""
                         android:textSize="20sp"
                         android:fontFamily="@font/sregular"
                         android:padding="5dp"
@@ -84,7 +81,7 @@
                         android:id="@+id/account_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="dp256080@gmail.com"
+                        android:text=""
                         android:textSize="20sp"
                         android:fontFamily="@font/sregular"
                         android:padding="5dp"
@@ -113,7 +110,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="7021470342"
+                        android:text=""
                         android:id="@+id/account_phone"
                         android:textStyle="italic"
                         android:textSize="20sp"
