--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -33,4 +33,14 @@
             android:id="@+id/search_recyView"/>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/pgbar_search"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/orange"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
+
 </FrameLayout>
