--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#B4FFFFFF</color>
     <color name="orange">#E07C19</color>
     <color name="darkblack">#C9000000</color>
+    <color name="gray">#A86B6A6A</color>
 </resources>
