--- a/app/src/main/res/layout/activity_random_recipe_details.xml
+++ b/app/src/main/res/layout/activity_random_recipe_details.xml
@@ -12,7 +12,9 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarrecipe"
@@ -47,7 +49,7 @@
 
         <TextView
             android:id="@+id/recipe_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp"
@@ -102,10 +104,20 @@
             android:textSize="22sp"
             android:layout_gravity="center"/>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            app:cardBackgroundColor="#F3F0E9"
+            android:layout_margin="10dp"
+            android:padding="2dp">
+
         <TextView
             android:id="@+id/recipe_meal_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#F3F0E9"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="10dp"
@@ -120,6 +132,8 @@
             android:singleLine="false"
             android:lineSpacingExtra="5dp"
             android:layout_gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="wrap_content"
